# claude-code-production-patterns

./: .gitignore  .worktree-config.template  ADVANCED_PATTERNS.md  GREENFIELD_NOTES.md  PATTERNS_RATIONALE.md  PERFORMANCE_AGENT_PROMPT.md  README.md  SCENARIO_JUSTIFICATION.md  WORKTREE_PATTERN.md  claude-config-pattern-section.md  direnv-pattern-section.md  hooks-pattern-section.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  project  python-313-conventions.md  user
.claude/skills/: access-skill-resources  cli-ux-colorful  dependency-management  development-standards  exhaustive-testing  git-workflow  handle-deprecation-warnings  official  project  skill-creator  user
.planning/: tone_shifts.md
.planning/archive/: ORIGINAL_PLAN.md.bak
actual-code/: README.md  create_worktree.py
actual-code/hooks/: CONFIGURATION.md  README.md  post-checkout  pre-commit
actual-code/hooks-config/: README.md  settings.local.json
bonus/: INFRASTRUCTURE_BEST_EXAMPLES.md  README.md  SIMPLE-TIPS_Attention-chime.md
bonus/docimp_infrastructure/: INFRASTRUCTURE-DOCS_1-Overview.md  INFRASTRUCTURE-DOCS_10-Development-Utilities.md  INFRASTRUCTURE-DOCS_11-Planning-Documentation.md  INFRASTRUCTURE-DOCS_12-State-Configuration-Files.md  (+20 more)
diagrams/: greenfield-vs-retrofit-comparison.md  greenfield-worktree-structure.md  retrofit-worktree-structure.md  session-resume.md  three-layer-architecture.md  workflow-state-management.md  worktree-structure-docimp.md  worktree-structure.md
docs/: ASSIGNMENT.md  PERFORMANCE.md
examples/: QUICKSTART.md
(+103 files in other folders)
